--- a/app/src/main/res/layout/fragment_login_layout_login_box.xml
+++ b/app/src/main/res/layout/fragment_login_layout_login_box.xml
@@ -23,10 +23,11 @@
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
             android:background="@null"
+            android:digits="@string/item_user_name_input_rules"
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:gravity="center"
-            android:hint="请输入手机号/邮箱"
+            android:hint="@string/item_input_phone_or_email"
             android:maxLength="60"
             android:paddingLeft="40dp"
             android:paddingRight="40dp"
