--- a/app/src/main/res/layout/fragment_set_new_pwd.xml
+++ b/app/src/main/res/layout/fragment_set_new_pwd.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_white"
-    android:orientation="vertical"
-    tools:context=".n.view.login.ResetPwdFragment">
+    android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/rLayout_new_pwd_input_box"
