--- a/app/src/main/res/layout/fragment_splash_before_login.xml
+++ b/app/src/main/res/layout/fragment_splash_before_login.xml
@@ -13,7 +13,7 @@
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
         android:layout_marginBottom="90dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="170dp"
         android:src="@drawable/pci_sign_in" />
 
 
@@ -21,11 +21,12 @@
         android:id="@+id/btn_to_login"
         android:layout_width="match_parent"
         android:layout_height="42dp"
-        android:layout_below="@+id/imv_login_logo"
+        android:layout_above="@+id/btn_to_register"
         android:layout_centerHorizontal="true"
         android:layout_marginEnd="30dp"
         android:layout_marginStart="30dp"
         android:background="@drawable/long_btn_bg_shape_4b9fd5"
+        android:clickable="true"
         android:gravity="center"
         android:text="登 陆"
         android:textColor="@color/color_white"
@@ -35,13 +36,14 @@
         android:id="@+id/btn_to_register"
         android:layout_width="match_parent"
         android:layout_height="42dp"
-        android:layout_below="@+id/btn_to_login"
+        android:layout_above="@+id/btn_look_around"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
         android:layout_marginEnd="30dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="14dp"
         android:background="@drawable/long_btn_bg_shape_f4f4f4"
+        android:clickable="true"
         android:gravity="center"
         android:text="注 册"
         android:textColor="@color/color_7c7c7c"
@@ -51,10 +53,12 @@
         android:id="@+id/btn_look_around"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_to_register"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="20dp"
         android:layout_marginTop="24dp"
+        android:clickable="true"
         android:text="随便看看"
         android:textColor="@color/color_7c7c7c"
         android:textSize="13sp" />
