--- a/app/src/main/res/layout/fragment_welcome_guide_view.xml
+++ b/app/src/main/res/layout/fragment_welcome_guide_view.xml
@@ -1,148 +1,137 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><!--<merge xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:card="http://schemas.android.com/apk/res-auto"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:animateLayoutChanges="true"--><!--android:background="@drawable/bg_welcome_guide"--><!--android:clickable="true">-->
+<com.cylan.jiafeigou.widget.GreatDragView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/v_great_drag"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
     android:background="@drawable/bg_welcome_guide"
     android:clickable="true">
 
-    <com.cylan.jiafeigou.widget.GreatDragView
-        android:id="@+id/v_great_drag"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
+    <android.support.v7.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="-8dp"
+        card:cardElevation="10dp">
 
-        <android.support.v7.widget.CardView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="-8dp"
-            card:cardElevation="10dp">
+            android:orientation="vertical"
+            android:paddingEnd="13dp"
+            android:paddingStart="13dp"
+            android:paddingTop="37dp">
 
-            <LinearLayout
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingEnd="13dp"
-                android:paddingStart="13dp"
-                android:paddingTop="37dp">
+                android:src="@drawable/pic_welcome_page_3" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/pic_welcome_page_3" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="30dp"
+                android:text="全景摄像机即将推出"
+                android:textColor="@color/color_5e97df"
+                android:textSize="17sp" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="30dp"
-                    android:text="全景摄像机即将推出"
-                    android:textColor="@color/color_5e97df"
-                    android:textSize="17sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="40dp"
+                android:layout_marginTop="3dp"
+                android:text="结合VR产品，前所未有的视觉体验"
+                android:textColor="@color/color_84bcfb"
+                android:textSize="14sp" />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginBottom="40dp"
-                    android:layout_marginTop="3dp"
-                    android:text="结合VR产品，前所未有的视觉体验"
-                    android:textColor="@color/color_84bcfb"
-                    android:textSize="14sp" />
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
+    <android.support.v7.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="-5dp"
+        card:cardElevation="10dp">
 
-        <android.support.v7.widget.CardView
-            android:layout_marginStart="3dp"
-            android:layout_marginTop="-5dp"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            card:cardElevation="10dp">
+            android:orientation="vertical"
+            android:paddingEnd="13dp"
+            android:paddingStart="13dp"
+            android:paddingTop="37dp">
 
-            <LinearLayout
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingEnd="13dp"
-                android:paddingStart="13dp"
-                android:paddingTop="37dp">
+                android:src="@drawable/pic_welcome_page_2" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/pic_welcome_page_2" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="30dp"
+                android:text="记录生活的每日精彩"
+                android:textColor="@color/color_5e97df"
+                android:textSize="17sp" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="30dp"
-                    android:text="记录生活的每日精彩"
-                    android:textColor="@color/color_5e97df"
-                    android:textSize="17sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="40dp"
+                android:layout_marginTop="3dp"
+                android:text="新增每日精彩，制作生活微视频"
+                android:textColor="@color/color_84bcfb"
+                android:textSize="14sp" />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginBottom="40dp"
-                    android:layout_marginTop="3dp"
-                    android:text="新增每日精彩，制作生活微视频"
-                    android:textColor="@color/color_84bcfb"
-                    android:textSize="14sp" />
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
+    <android.support.v7.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        card:cardElevation="10dp">
 
-        <android.support.v7.widget.CardView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            card:cardElevation="10dp">
+            android:orientation="vertical"
+            android:paddingEnd="13dp"
+            android:paddingStart="13dp"
+            android:paddingTop="37dp">
 
-            <LinearLayout
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingEnd="13dp"
-                android:paddingStart="13dp"
-                android:paddingTop="37dp">
+                android:src="@drawable/pic_welcome_page_1" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/pic_welcome_page_1" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="30dp"
+                android:text="全新设计"
+                android:textColor="@color/color_5e97df"
+                android:textSize="17sp" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="30dp"
-                    android:text="全新设计"
-                    android:textColor="@color/color_5e97df"
-                    android:textSize="17sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="40dp"
+                android:layout_marginTop="3dp"
+                android:text="更简洁的设计，更好的体验"
+                android:textColor="@color/color_84bcfb"
+                android:textSize="14sp" />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+</com.cylan.jiafeigou.widget.GreatDragView>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginBottom="40dp"
-                    android:layout_marginTop="3dp"
-                    android:text="更简洁的设计，更好的体验"
-                    android:textColor="@color/color_84bcfb"
-                    android:textSize="14sp" />
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-    </com.cylan.jiafeigou.widget.GreatDragView>
-
-    <!--<com.cylan.jiafeigou.widget.GuideIndicatorLayout-->
-    <!--android:background="#eee000"-->
-    <!--android:id="@+id/v_guide_indicator"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_gravity="bottom|center_horizontal"-->
-    <!--android:layout_marginBottom="50dp" />-->
-</FrameLayout>
+    <!--<com.cylan.jiafeigou.widget.GuideIndicatorLayout--><!--android:background="#eee000"--><!--android:id="@+id/v_guide_indicator"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_gravity="bottom|center_horizontal"--><!--android:layout_marginBottom="50dp" />--><!--</merge>-->
