--- a/app/src/main/res/layout/fragment_cloud_correlation_door_bell_items.xml
+++ b/app/src/main/res/layout/fragment_cloud_correlation_door_bell_items.xml
@@ -20,7 +20,7 @@
         android:textColor="@color/color_4b9fd5"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
-        android:background="@drawable/btn_share"
+        android:background="@drawable/btn_cancle_relative_doorbell_shape"
         android:text="取消关联"
         android:gravity="center"
         android:layout_width="wrap_content"
