--- a/app/src/main/res/layout/layout_toaster_positive.xml
+++ b/app/src/main/res/layout/layout_toaster_positive.xml
@@ -3,9 +3,11 @@
     android:id="@+id/notify"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@drawable/toaster_bg"
     android:drawablePadding="12dp"
     android:gravity="center"
     android:paddingBottom="23dp"
     android:paddingTop="23dp"
-    android:textColor="@android:color/background_dark"
+    android:drawableTop="@drawable/icon_toaster_positive"
+    android:textColor="#fff"
     android:textSize="14sp" />
