--- a/app/src/main/res/layout/fragment_login_layout_register_box.xml
+++ b/app/src/main/res/layout/fragment_login_layout_register_box.xml
@@ -125,6 +125,7 @@
 
 
         <LinearLayout
+            android:id="@+id/lLayout_agreement"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -138,6 +139,7 @@
                 android:text="点击按钮,表示你已同意" />
 
             <TextView
+                android:id="@+id/tv_agreement"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
