--- a/app/src/main/res/layout/layout_suggestion_recycleview_list.xml
+++ b/app/src/main/res/layout/layout_suggestion_recycleview_list.xml
@@ -1,8 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:id="@+id/rv_home_mine_suggestion"
     android:layout_height="0dp"
     android:layout_weight="1.0"
-    android:layout_marginBottom="4dp"
- />
+    android:layout_marginBottom="4dp">
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/rv_home_mine_suggestion"
+    />
+    <include
+        layout="@layout/layout_loading_progress_rotate"
+        />
+</FrameLayout>
+
+    <!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--android:layout_width="match_parent"-->
+<!--android:id="@+id/rv_home_mine_suggestion"-->
+<!--android:layout_height="0dp"-->
+<!--android:layout_weight="1.0"-->
+<!--android:layout_marginBottom="4dp"-->
+    <!--/>-->
