--- a/app/src/main/res/layout/layout_item_home_page_list.xml
+++ b/app/src/main/res/layout/layout_item_home_page_list.xml
@@ -44,6 +44,20 @@
         android:textSize="16sp" />
 
     <TextView
+        android:id="@+id/tv_device_share_tag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/v_icon_base_line_bottom"
+        android:layout_marginStart="8dp"
+        android:layout_toEndOf="@+id/tv_device_alias"
+        android:background="@drawable/label_home_share_bg"
+        android:padding="1dp"
+        android:text="@string/Tap3_ShareDevice_Button"
+        android:textColor="@color/color_47C6A7"
+        android:textSize="12sp"
+        android:visibility="gone" />
+
+    <TextView
         android:id="@+id/tv_device_msg_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
