--- a/app/src/main/res/layout/layout_item_home_page_list.xml
+++ b/app/src/main/res/layout/layout_item_home_page_list.xml
@@ -118,6 +118,13 @@
             android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/img_device_state_4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:visibility="gone" />
     </LinearLayout>
 
     <View
