--- a/app/src/main/res/layout/activity_bell_live.xml
+++ b/app/src/main/res/layout/activity_bell_live.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:hunt="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              tools:context=".n.view.bell.BellLiveActivity">
+    xmlns:hunt="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".n.view.bell.BellLiveActivity">
 
     <FrameLayout
         android:id="@+id/fLayout_bell_live_holder"
@@ -22,57 +22,10 @@
                 android:id="@+id/act_bell_live_video_picture"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/default_diagram_mask"
-                android:scaleType="fitXY"/>
+                android:scaleType="fitXY"
+                android:src="@drawable/default_diagram_mask" />
 
         </FrameLayout>
-
-
-        <FrameLayout
-            android:background="@drawable/doorbell_shadow"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-
-        <TextView
-            android:id="@+id/tv_bell_live_land_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/nav_icon_back_white"
-            android:drawablePadding="@dimen/y20"
-            android:padding="@dimen/y15"
-            android:text="房间"
-            android:textColor="@color/color_white"
-            android:textSize="@dimen/sp16" />
-            <!--<TextView-->
-                <!--android:id="@+id/tv_top_bar_left"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:drawablePadding="@dimen/y15"-->
-                <!--android:padding="@dimen/y15"-->
-                <!--android:layout_marginStart="@dimen/y8"-->
-                <!--android:layout_marginTop="@dimen/y9"-->
-                <!--android:drawableLeft="@drawable/nav_tab_back_selector"-->
-                <!--android:textColor="@color/color_white"-->
-                <!--android:textSize="@dimen/sp16" />-->
-
-            <TextView
-                android:id="@+id/tv_bell_live_flow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_margin="@dimen/y15"
-                android:background="@drawable/live_flow_transparent_bg"
-                android:gravity="center"
-                android:text="0kb"
-                android:paddingBottom="@dimen/y5"
-                android:paddingLeft="@dimen/y8"
-                android:paddingRight="@dimen/y8"
-                android:paddingTop="@dimen/y5"
-                android:textColor="@color/color_white"
-                android:textSize="@dimen/sp13"
-                android:visibility="visible"/>
-
 
 
         <ImageView
@@ -82,18 +35,51 @@
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/y10"
             android:padding="@dimen/y10"
-            android:src="@drawable/icon_live_zoom_full_screen"/>
+            android:src="@drawable/icon_live_zoom_full_screen" />
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/doorbell_shadow">
+
+            <TextView
+                android:layout_marginTop="@dimen/y40"
+                android:id="@+id/act_bell_live_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/y15"
+                android:drawableLeft="@drawable/nav_icon_back_white"
+                android:drawablePadding="@dimen/y20"
+                android:textColor="@color/color_white"
+                android:textSize="@dimen/sp16" />
+
+            <TextView
+                android:id="@+id/tv_bell_live_flow"
+                android:layout_marginTop="@dimen/y40"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/y21"
+                android:layout_gravity="end"
+                android:layout_marginEnd="@dimen/y15"
+                android:background="@drawable/live_flow_transparent_bg"
+                android:gravity="center"
+                android:paddingLeft="@dimen/y8"
+                android:paddingRight="@dimen/y8"
+                android:text="0kb"
+                android:textColor="@color/color_white"
+                android:textSize="@dimen/sp13"
+                android:visibility="visible" />
+        </FrameLayout>
     </FrameLayout>
 
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_marginTop="@dimen/y113"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/y113">
 
-        <include layout="@layout/layout_bell_pre_live_hot_seat"/>
+        <include layout="@layout/layout_bell_pre_live_hot_seat" />
 
-        <include layout="@layout/layout_bell_after_live_hot_seat"/>
+        <include layout="@layout/layout_bell_after_live_hot_seat" />
 
     </FrameLayout>
 
