--- a/app/src/main/res/layout/fragment_facility_information.xml
+++ b/app/src/main/res/layout/fragment_facility_information.xml
@@ -21,10 +21,10 @@
                 android:id="@+id/imgV_top_bar_center"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/y48"
-                android:drawablePadding="@dimen/x15"
                 android:drawableLeft="@drawable/nav_tab_back_selector"
-                android:paddingLeft="@dimen/x15"
+                android:drawablePadding="@dimen/x15"
                 android:gravity="center_vertical"
+                android:paddingLeft="@dimen/x15"
                 android:text="@string/EQUIPMENT_INFO"
                 android:textColor="@color/color_white"
                 android:textSize="@dimen/sp18" />
@@ -329,42 +329,44 @@
                     android:background="@color/color_f2f2f2" />
             </LinearLayout>
 
-            <!-- 软件版本 -->
-            <LinearLayout
-                style="@style/information_item"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/y72"
-                android:orientation="vertical">
+            <!--&lt;!&ndash; 软件版本 &ndash;&gt;-->
+            <!--<LinearLayout-->
+            <!--style="@style/information_item"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="@dimen/y72"-->
+            <!--android:orientation="vertical">-->
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/y15"
-                    android:text="@string/SOFTWARE_VERSION"
-                    android:textColor="#000000"
-                    android:textSize="@dimen/sp16" />
+            <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="@dimen/y15"-->
+            <!--android:text="@string/SOFTWARE_VERSION"-->
+            <!--android:textColor="#000000"-->
+            <!--android:textSize="@dimen/sp16" />-->
 
-                <TextView
-                    android:id="@+id/tv_device_soft_version"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/y3"
-                    android:textColor="#8C8C8C"
-                    android:textSize="@dimen/sp13" />
+            <!--<TextView-->
+            <!--android:id="@+id/tv_device_soft_version"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="@dimen/y3"-->
+            <!--android:textColor="#8C8C8C"-->
+            <!--android:textSize="@dimen/sp13" />-->
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dip"
-                    android:layout_marginTop="@dimen/y10"
-                    android:background="@color/color_f2f2f2" />
-            </LinearLayout>
+            <!--<View-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="1dip"-->
+            <!--android:layout_marginTop="@dimen/y10"-->
+            <!--android:background="@color/color_f2f2f2" />-->
+            <!--</LinearLayout>-->
 
             <!-- 电池电量 -->
             <LinearLayout
+                android:id="@+id/lLayout_device_battery"
                 style="@style/information_item"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y72"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -401,12 +403,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/y15"
-                    android:text="@string/VALID_STORAGE"
+                    android:text="@string/STANBY"
                     android:textColor="#000000"
                     android:textSize="@dimen/sp16" />
 
                 <TextView
-                    android:id="@+id/tv_device_storage"
+                    android:id="@+id/tv_device_uptime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/y3"
