--- a/app/src/_doby/res/values/oem_.xml
+++ b/app/src/_doby/res/values/oem_.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <bool name="show_guide">true</bool>
     <bool name="show_copyright">false</bool>
     <bool name="show_agreement">true</bool>
     <bool name="show_about">true</bool>
