--- a/app/src/main/res/layout/activity_bell_record_detail.xml
+++ b/app/src/main/res/layout/activity_bell_record_detail.xml
@@ -30,25 +30,37 @@
         <!--app:progress_swipe_degree="310"  />-->
     </FrameLayout>
 
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/act_bell_pic_option"
         android:layout_width="match_parent"
         android:layout_height="@dimen/y60"
         android:layout_gravity="bottom"
-        android:visibility="visible">
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/act_bell_picture_opt_download"
-            style="@style/picture_opt_download" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:src="@drawable/icon_download" />
 
         <ImageView
             android:id="@+id/act_bell_picture_opt_share"
-            style="@style/picture_opt_share" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:src="@drawable/icon_share" />
 
         <ImageView
             android:id="@+id/act_bell_picture_opt_collection"
-            style="@style/picture_opt_collection" />
-    </FrameLayout>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:src="@drawable/icon_collection" />
+    </LinearLayout>
 
 
     <RelativeLayout
